[metadata]
name = spelling_bee_mh
version = 0.0.0
url = https://github.com/mharty3/spelling_bee_package_tutorial
maintainer = Michael Harty
description = code to cheat on New York Times Spelling Bee Game
long_description = file: README.md
long_description_content_type = text/markdown



[options]
# use this for flat layout
# use nothing for src layout
# packages = mypackage
install_requires =
    requests
    importlib-metadata; python_version < "3.8"